add progress bar for drive size

--- a/PSS/PSS/Pages/Settings.razor
+++ b/PSS/PSS/Pages/Settings.razor
@@ -91,13 +91,14 @@
         {
             <span>@mediaRowCount Items in Library</span>
             <span>@albumsCount Albums</span>
-            <span>Library Drive Total Size (Usable): @F.FormatBytes(totalUsableDriveSize)</span>
+            <span style="margin-top: 14px;">Library Drive Total Size (Usable): @F.FormatBytes(totalUsableDriveSize)</span>
             <span>Library Drive Free Space: @F.FormatBytes(freeDriveSpace)</span>
+            <progress style="margin-bottom: 14px" max="100" value="@((float)freeDriveSpace / totalUsableDriveSize * 100)"></progress>
             <span>Library Size: @F.FormatBytes(librarySize)</span>
             string url = $"/view/{oldestItem.uuid}";
             <span><a target="_blank" rel="noopener noreferrer" href="@url">Oldest Item in Library, Taken on @oldestItem.dateTaken</a></span> <!-- https://stackoverflow.com/questions/50709625/link-with-target-blank-and-rel-noopener-noreferrer-still-vulnerable -->
             url = $"/view/{newestItem.uuid}";
-            <span><a target="_blank" rel="noopener noreferrer" href="@url">Newest Item in Library, Taken on @newestItem.dateTaken</a></span> <!-- https://stackoverflow.com/questions/50709625/link-with-target-blank-and-rel-noopener-noreferrer-still-vulnerable -->
+            <span><a target="_blank" rel="noopener noreferrer" href="@url">Newest Item in Library, Taken on @newestItem.dateTaken</a></span>
             <span>Server went online at @whenWentOnline</span>
             <span>Server has been online for @(DateTime.Now - whenWentOnline)</span>
         }
