--- a/PSS/PSS/Pages/Settings.razor
+++ b/PSS/PSS/Pages/Settings.razor
@@ -74,6 +74,7 @@
         <button class="textBtn" title="Last backed up on @lastBackedUp" @onclick="@M.BackupServer"><span class="material-icons-outlined">backup</span><span>Backup Server</span></button>
         <button class="textBtn" @onclick="@M.RestoreBackup"><span class="material-icons-outlined">restore</span><span>Restore Backup</span></button>
         <button class="textBtn" @onclick="@(() => { Directory.Delete(S.tmpFolderPath, true); Directory.CreateDirectory(S.tmpFolderPath); })"><span class="material-icons-outlined">folder_delete</span><span>Clear pss_tmp</span></button>
+        <button title="Clear pss_tmp and Empty Trash" class="textBtn" @onclick="@FreeUpSpace"><span class="material-icons-outlined">folder_delete</span><span>Free Up Space</span></button>
         @if (!maintenanceLoaded)
         {<button class="textBtn" @onclick="@RunMaintenanceCheck"><span class="material-icons-outlined">build</span><span>Run Maintenance Check</span></button>}
         @if (maintenanceLoaded)
@@ -186,6 +187,16 @@
 
         oldestItem = new C.MediaRow("", DateTime.Now, DateTime.Now, false, Guid.Empty);
         newestItem = new C.MediaRow("", DateTime.Now, DateTime.Now, false, Guid.Empty);
+    }
+
+    private static void FreeUpSpace()
+    {
+        //Clear pss_tmp.
+        Directory.Delete(S.tmpFolderPath, true);
+        Directory.CreateDirectory(S.tmpFolderPath);
+        
+        //Empty trash.
+        foreach (C.MediaRow item in C.LoadMediaTrashTable()) C.PermDeleteItem(item.path);
     }
 
     private static void ApplyBtnClicked()
