--- a/PSS/PSS/Pages/Test.razor
+++ b/PSS/PSS/Pages/Test.razor
@@ -6,10 +6,9 @@
     //Metadata.DateTakenSrc yes = new();
     //Metadata.GetFilenameTimestamp("Screenshot 2021-11-16 213028 - Copy.jpg", out DateTime dateTaken, ref yes);
     //Console.WriteLine(dateTaken);
+    <button style="margin-left: 50%; margin-top: 10%; color: black;" @onclick="@(F.CreateDownloadZip)">click me</button>
 }
 
 @code{
-
     
-
 }
