add working download button to index

--- a/PSS/PSS/Pages/Index.razor
+++ b/PSS/PSS/Pages/Index.razor
@@ -7,7 +7,7 @@
 @{
     <header style="visibility: @headerVis">
         <div id="buttons">
-            <button class="iconBtn" @onclick="@(async () => { F.CopyItemsToZipPath(selectedItems); await F.CreateDownloadZip(); })"><span class="material-icons-outlined">file_download</span></button>
+            <button class="iconBtn"><a style="text-decoration: none" class="material-icons-outlined" @onclick="@DownloadSelected" href="@S.TMP_REQUEST_PATH/@zipFilename" download="@zipFilename">file_download</a></button>
             <button class="iconBtn" @onclick="@(() => F.VisToggle(ref albumsVis))"><span class="material-icons-outlined">collections</span></button>
             <button class="iconBtn" title="Add or Remove Stars From Selected" @onclick="@(() => F.VisToggle(ref starChoiceVis))"><span class="material-icons-outlined">star_outline</span></button>
             <button class="iconBtn" @onclick="DeleteBtnClick"><svg width="24px" height="24px" class="material-icons" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
@@ -71,6 +71,8 @@
     
     private static string starChoiceVis;
 
+    private static string zipFilename;
+
     private async void UpdateStars(bool starred)
     {
         C.UpdateStarred(selectedItems, starred);
@@ -92,6 +94,12 @@
 
     [Inject] //https://code-maze.com/how-to-call-javascript-code-from-net-blazor-webassembly/
     public IJSRuntime JSRuntime { get; set; }
+
+    private static async void DownloadSelected()
+    {
+        F.CopyItemsToZipPath(selectedItems);
+        zipFilename = await F.CreateDownloadZip();
+    }
 
     private async Task ToggleCheck(string id) //id = string path
     {
