--- a/PSS/PSS/Shared/AlbumSelector.razor
+++ b/PSS/PSS/Shared/AlbumSelector.razor
@@ -52,7 +52,7 @@
 @code {
     private static List<C.Album> albums;
     private static List<C.Album> folders;
-
+    
     private static List<bool> checkedAlbums;
     private static List<bool> checkedFolders;
     private static int checkedFolderIndex; //Which index in folders is checked (can only have 1 checked (true)).
@@ -83,6 +83,7 @@
 
     protected override void OnInitialized()
     {
+        AlbumCreator.AlbumCreated += RefreshData;
         albums = C.GetAlbumsTable(true, false);
         folders = C.GetAlbumsTable(false, true);
         checkedAlbums = (from album in albums select new bool()).ToList();
@@ -90,6 +91,17 @@
         checkedFolderIndex = -1; //-1 = a folder isn't picked
         AlbumsVis = "hidden";
         HeaderVis = "hidden";
+    }
+
+    private async void RefreshData(object sender, EventArgs e)
+    {
+        albums = C.GetAlbumsTable(true, false);
+        folders = C.GetAlbumsTable(false, true);
+        checkedAlbums = (from album in albums select new bool()).ToList();
+        checkedFolders = (from album in albums select new bool()).ToList();
+        checkedFolderIndex = -1; //-1 = a folder isn't picked
+
+        await InvokeAsync(StateHasChanged); //https://stackoverflow.com/questions/56477829/how-to-fix-the-current-thread-is-not-associated-with-the-renderers-synchroniza
     }
 
     //Closing the div for selecting album(s) to add selected items to.
