add " - PSS" after each page title

--- a/PSS/PSS/Pages/AlbumsMain.razor
+++ b/PSS/PSS/Pages/AlbumsMain.razor
@@ -1,7 +1,7 @@
 @* Show all albums and allow user to sort them and make new ones *@
 @page "/albums"
 
-<title>Albums</title>
+<title>Albums - PSS</title>
 <link href="css/AlbumsMain.css" rel="stylesheet">
 
 <header>
