--- a/PSS/PSS/Pages/Maintenance/MissingFiles.razor
+++ b/PSS/PSS/Pages/Maintenance/MissingFiles.razor
@@ -1,6 +1,6 @@
 @page "/maintenance/missing-files"
 
-<title>Missing Files — Maintenance</title>
+<title>Missing Files — Maintenance - PSS</title>
 
 <style>
     header {
