--- a/PSS/PSS/Pages/Settings.razor
+++ b/PSS/PSS/Pages/Settings.razor
@@ -1,6 +1,6 @@
 @page "/settings"
 
-<title>Settings</title>
+<title>Settings - PSS</title>
 <link href="css/Settings.css" rel="stylesheet"/>
 
 <div id="body">
