--- a/PSS/PSS/Pages/Test.razor
+++ b/PSS/PSS/Pages/Test.razor
@@ -1,7 +1,7 @@
 @*A blank page just for testing stuff*@
 @page "/test"
 
-<title>Test</title>
+<title>Test - PSS</title>
 @{
     //Metadata.DateTakenSrc yes = new();
     //Metadata.GetFilenameTimestamp("Screenshot 2021-11-16 213028 - Copy.jpg", out DateTime dateTaken, ref yes);
