--- a/PSS/PSS/Pages/Trash.razor
+++ b/PSS/PSS/Pages/Trash.razor
@@ -1,7 +1,7 @@
 ﻿@page "/trash"
 @inject NavigationManager navigationManager;
 
-<title>Trash</title>
+<title>Trash - PSS</title>
 <link href="css/Trash.css" rel="stylesheet"/>
 
 @{
