--- a/PSS/PSS/Pages/UploadApply.razor
+++ b/PSS/PSS/Pages/UploadApply.razor
@@ -1,6 +1,6 @@
 @page "/apply-upload"
 
-<title>Apply Upload</title>
+<title>Apply Upload - PSS</title>
 <link href="css/UploadApply.css" rel="stylesheet">
 
 <header>
