--- a/PSS/PSS/App.razor
+++ b/PSS/PSS/App.razor
@@ -4,7 +4,7 @@
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
-            <title>404</title>
+            <title>404 - PSS</title>
             <Error/>
         </LayoutView>
     </NotFound>
