--- a/PSS/PSS/Pages/AlbumView.razor
+++ b/PSS/PSS/Pages/AlbumView.razor
@@ -1,7 +1,7 @@
 @page "/album-view/{albumID}"
 @inject NavigationManager navigationManager; //https://stackoverflow.com/a/58417140
 
-<title>@albumName</title>
+<title>@albumName - PSS</title>
 <link href="css/AlbumView.css" rel="stylesheet">
 
 @{
