--- a/PSS/PSS/Pages/Index.razor
+++ b/PSS/PSS/Pages/Index.razor
@@ -1,7 +1,7 @@
 @page "/"
 @inject NavigationManager navigationManager;
 
-<title>Photos</title>
+<title>Photos - PSS</title>
 <link href="css/IndexAndStarred.css" rel="stylesheet"/>
 
 @{
