--- a/PSS/PSS/Pages/Starred.razor
+++ b/PSS/PSS/Pages/Starred.razor
@@ -1,7 +1,7 @@
 @page "/starred"
 @inject NavigationManager navigationManager;
 
-<title>Starred</title>
+<title>Starred - PSS</title>
 <link href="css/IndexAndStarred.css" rel="stylesheet"/>
 
 @{
