--- a/PSS/PSS/wwwroot/css/UploadApply.css
+++ b/PSS/PSS/wwwroot/css/UploadApply.css
@@ -120,6 +120,6 @@ header > #statusSpan {
     border: none;
 }
 
-#mainDiv > .itemDiv > .infoSpan {margin-left: 13px; color: #93ccdc;}
+#mainDiv > .itemDiv > .infoSpan {margin-left: 13px; color: #00af00;}
 #mainDiv > .itemDiv > .warnSpan {color: yellow;}
 #mainDiv > .itemDiv > .errorSpan {color: red;}
