--- a/PSS/PSS/wwwroot/css/Upload.css
+++ b/PSS/PSS/wwwroot/css/Upload.css
@@ -1,30 +1,18 @@
-#baseContainer { /*https://stackoverflow.com/a/14816807*/
-    width: 1400px;
-    height: 900px;
-    position: absolute; /*Can also be `fixed`*/
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    /*Solves a problem in which the content is being cut when the div is smaller than its' wrapper:*/
-    max-width: 100%;
-    max-height: 100%;
-    overflow: auto;
-}
-
-#applyContainer { /*https://stackoverflow.com/a/5703632*/
-    width: 100%;
-    height: 15%;
+#mainDiv { /*https://stackoverflow.com/a/14816807*/
+    padding: 10px;
+    position: absolute;
+    left: 50%;
+    top: 20%;
+    transform: translate(-50%, -50%);
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
 }
 
-#applyContainer > span {
-    font-size: 25px;
+#mainDiv > * {
+    margin: 8px;
 }
 
-#applyContainer > button {
-    margin-left: 24px;
+#mainDiv > .textBtn {
+    width: fit-content;
 }
