start this but might scrap it

--- a/PSS/PSS/Pages/Upload.razor
+++ b/PSS/PSS/Pages/Upload.razor
@@ -21,7 +21,7 @@
         }
 
         <button class="textBtn">
-            <span class="material-icons-outlined">drive_folder_upload</span><a href="gpo-import">Import a Folder Sorted with GPO</a>
+            <span class="material-icons-outlined">drive_folder_upload</span><a href="gpo-import">Import a Folder in pss_upload Sorted with GPO</a>
         </button>
     </div>
 }
