--- a/PSS/PSS/Pages/ImportGPOFolder.razor
+++ b/PSS/PSS/Pages/ImportGPOFolder.razor
@@ -1,4 +1,4 @@
-﻿@page "/gpo-import"
+@page "/gpo-import"
 
 <title>GPO Import - PSS</title>
 <link href="css/ImportGPOFolder.css" rel="stylesheet">
@@ -98,11 +98,11 @@
         allShortPaths = new List<string>();
         
         //Get all supported file types in pss_upload and group them together in a single List.
-        pngPaths = Directory.GetFiles(S.uploadFolderPath, "*.png", SearchOption.AllDirectories).ToList();
-        jpgPaths = Directory.GetFiles(S.uploadFolderPath, "*.jp*g", SearchOption.AllDirectories).ToList();
-        gifPaths = Directory.GetFiles(S.uploadFolderPath, "*.gif", SearchOption.AllDirectories).ToList();
-        mp4Paths = Directory.GetFiles(S.uploadFolderPath, "*.mp4", SearchOption.AllDirectories).ToList();
-        mkvPaths = Directory.GetFiles(S.uploadFolderPath, "*.mkv", SearchOption.AllDirectories).ToList();
+        pngPaths = Directory.GetFiles(Upload.gpoFolderPath, "*.png", SearchOption.AllDirectories).ToList();
+        jpgPaths = Directory.GetFiles(Upload.gpoFolderPath, "*.jp*g", SearchOption.AllDirectories).ToList();
+        gifPaths = Directory.GetFiles(Upload.gpoFolderPath, "*.gif", SearchOption.AllDirectories).ToList();
+        mp4Paths = Directory.GetFiles(Upload.gpoFolderPath, "*.mp4", SearchOption.AllDirectories).ToList();
+        mkvPaths = Directory.GetFiles(Upload.gpoFolderPath, "*.mkv", SearchOption.AllDirectories).ToList();
         allFullPaths = jpgPaths.Concat(pngPaths).Concat(gifPaths).Concat(mp4Paths).Concat(mkvPaths).ToList();
         allFiles = new List<C.UAFile>(allFullPaths.Count);
 
@@ -114,15 +114,26 @@
             dtPath = dtPath.Replace(Path.GetFileName(dtPath), "");
             if (dtPath[0] == '/') dtPath = dtPath.Remove(0, 1);
 
-            string[] data = dtPath.Split('/'); //Split 2018/2 February/14 into 2018, 2 February, and 14
-            string year = data[0];
-            string month = data[1].Substring(0, 2).Trim();
-            string day = data[2];
-            
-            //Now try and get time
-            (bool hasTimeData, Metadata.DateTakenSrc timeSrc) = Metadata.GetDateTaken(fullPath, out DateTime time);
-            DateTime fullDT = new(Int32.Parse(year), Int32.Parse(month), Int32.Parse(day), time.Hour, time.Month, time.Day);
+            bool hasTimeData;
+            Metadata.DateTakenSrc timeSrc;
+            DateTime fullDT;
+            if (dtPath.Contains("Unknown Date Taken"))
+            {
+                hasTimeData = false;
+                timeSrc = Metadata.DateTakenSrc.Now;
+                fullDT = DateTime.Now;
+            }
+            else
+            {
+                string[] data = dtPath.Split('/'); //Split 2018/2 February/14 into 2018, 2 February, and 14
+                string year = data[0];
+                string month = data[1].Substring(0, 2).Trim();
+                string day = data[2];
 
+                //Now try and get time
+                (hasTimeData,  timeSrc) = Metadata.GetDateTaken(fullPath, out DateTime time);
+                fullDT = new DateTime(Int32.Parse(year), Int32.Parse(month), Int32.Parse(day), time.Hour, time.Month, time.Day);
+            }
             C.UAFile file = new()
             {
                 fullPath = fullPath.Replace('\\', '/'),
