Improve UI for importing a GPO folder

--- a/PSS/PSS/wwwroot/css/Upload.css
+++ b/PSS/PSS/wwwroot/css/Upload.css
@@ -16,3 +16,9 @@
 #mainDiv > .textBtn {
     width: fit-content;
 }
+
+#mainDiv > .bigText {
+    font-size: 25px;
+    margin-bottom: 20px;
+    margin-top: 70px;
+}
