--- a/PSS/PSS/Pages/ImportGPOFolder.razor
+++ b/PSS/PSS/Pages/ImportGPOFolder.razor
@@ -98,11 +98,11 @@
         allShortPaths = new List<string>();
         
         //Get all supported file types in pss_upload and group them together in a single List.
-        pngPaths = Directory.GetFiles(Upload.gpoFolderPath, "*.png", SearchOption.AllDirectories).ToList();
-        jpgPaths = Directory.GetFiles(Upload.gpoFolderPath, "*.jp*g", SearchOption.AllDirectories).ToList();
-        gifPaths = Directory.GetFiles(Upload.gpoFolderPath, "*.gif", SearchOption.AllDirectories).ToList();
-        mp4Paths = Directory.GetFiles(Upload.gpoFolderPath, "*.mp4", SearchOption.AllDirectories).ToList();
-        mkvPaths = Directory.GetFiles(Upload.gpoFolderPath, "*.mkv", SearchOption.AllDirectories).ToList();
+        pngPaths = Directory.GetFiles(Upload.GpoFolderPath, "*.png", SearchOption.AllDirectories).ToList();
+        jpgPaths = Directory.GetFiles(Upload.GpoFolderPath, "*.jp*g", SearchOption.AllDirectories).ToList();
+        gifPaths = Directory.GetFiles(Upload.GpoFolderPath, "*.gif", SearchOption.AllDirectories).ToList();
+        mp4Paths = Directory.GetFiles(Upload.GpoFolderPath, "*.mp4", SearchOption.AllDirectories).ToList();
+        mkvPaths = Directory.GetFiles(Upload.GpoFolderPath, "*.mkv", SearchOption.AllDirectories).ToList();
         allFullPaths = jpgPaths.Concat(pngPaths).Concat(gifPaths).Concat(mp4Paths).Concat(mkvPaths).ToList();
         allFiles = new List<C.UAFile>(allFullPaths.Count);
 
@@ -110,7 +110,7 @@
         {
             //Get the date taken based on this item's fullPath.
             string dtPath = fullPath.Replace('\\', '/');
-            dtPath = dtPath.Replace(Upload.gpoFolderPath, "");
+            dtPath = dtPath.Replace(Upload.GpoFolderPath, "");
             dtPath = dtPath.Replace(Path.GetFileName(dtPath), "");
             if (dtPath[0] == '/') dtPath = dtPath.Remove(0, 1);
 
