--- a/PSS/PSS/Pages/Upload.razor
+++ b/PSS/PSS/Pages/Upload.razor
@@ -30,7 +30,7 @@
 }
 
 @code {
-    private static string[] jpgPaths, pngPaths, gifPaths, mp4Paths, mkvPaths, allPaths;
+    private static string[] jpgPaths, pngPaths, gifPaths, mp4Paths, mkvPaths, movPaths, allPaths;
 
     private static string gpoFolderPath;
 
@@ -67,7 +67,8 @@
         gifPaths = Directory.GetFiles(S.uploadFolderPath, "*.gif", SearchOption.AllDirectories);
         mp4Paths = Directory.GetFiles(S.uploadFolderPath, "*.mp4", SearchOption.AllDirectories);
         mkvPaths = Directory.GetFiles(S.uploadFolderPath, "*.mkv", SearchOption.AllDirectories);
-        allPaths = jpgPaths.Concat(pngPaths).Concat(gifPaths).Concat(mp4Paths).Concat(mkvPaths).ToArray();
+        movPaths = Directory.GetFiles(S.uploadFolderPath, "*.mov", SearchOption.AllDirectories);
+        allPaths = jpgPaths.Concat(pngPaths).Concat(gifPaths).Concat(mp4Paths).Concat(mkvPaths).Concat(movPaths).ToArray();
     }
 
 }
