--- a/PSS/PSS/Pages/ImportGPOFolder.razor
+++ b/PSS/PSS/Pages/ImportGPOFolder.razor
@@ -66,7 +66,7 @@
                 @if (!allFiles[i].dataPresent && !allFiles[i].alreadyInLib){<span class="warnSpan">No DT found. DT set to now.</span>}
                 @if (allFiles[i].alreadyInLib){<span class="errorSpan">Item already in library. Won't upload.</span>}
                 
-                <button class="iconBtn" title="Remove This Item From the Upload" @onclick="@(() => DeleteBtnClick(ii, allFiles[ii].fullPath))"><span class="material-icons">close</span></button>
+                <button class="iconBtn" title="Remove This Item From the Upload" @onclick="@(() => DeleteBtnClick(ii))"><span class="material-icons">close</span></button>
             </div>
         }
     </div>
@@ -132,14 +132,16 @@
                 string day = data[2];
 
                 //Now try and get time
-                (hasTimeData,  timeSrc) = Metadata.GetDateTaken(fullPath, out DateTime time);
+                hasTimeData = Metadata.GetDateTaken(fullPath, out DateTime time, out timeSrc);
                 fullDT = new DateTime(Int32.Parse(year), Int32.Parse(month), Int32.Parse(day), time.Hour, time.Month, time.Day);
             }
+            
+            string extLower = Path.GetExtension(fullPath).ToLower();
             C.UAFile file = new()
             {
                 fullPath = fullPath.Replace('\\', '/'),
                 shortPath = null,
-                thumbnail = fullPath.Contains(".mp4") || fullPath.Contains(".mkv") || fullPath.Contains(".mov") ? F.GenerateThumbnail(fullPath) : null,
+                thumbnail = extLower is ".mp4" or ".mkv" or ".mov" ? F.GenerateThumbnail(fullPath) : null,
                 dateTaken = fullDT,
                 dataPresent = hasTimeData,
                 dateTakenSrc = timeSrc,
@@ -160,7 +162,7 @@
     private static void UpdateStatus() => status = allFiles.Count == 0 ? "No files found to add" : $"{allFiles.Select(f => f.thumbnail != null).Count()} pictures and {0} videos pending upload. {allFiles.Count(c => !c.dataPresent)} Warnings. {allFiles.Count(c => c.alreadyInLib)} Errors.";
 
     //Clears an item from the Lists
-    private static void DeleteBtnClick(int index, string path)
+    private static void DeleteBtnClick(int index)
     {
         allFiles.RemoveAt(index);
         UpdateStatus();
