--- a/PSS/PSS/Pages/ImportGPOFolder.razor
+++ b/PSS/PSS/Pages/ImportGPOFolder.razor
@@ -75,7 +75,6 @@
 @code{
     AlbumSelector albumSelector = new();
 
-    private static List<string> pngPaths, jpgPaths, gifPaths, mp4Paths, mkvPaths, movPaths;
     private static List<string> allShortPaths; //Passed in to AlbumSelector and set in AddItems().
     private static List<string> allFullPaths;
     private static List<C.UAFile> allFiles;
@@ -97,14 +96,7 @@
     {
         allShortPaths = new List<string>();
         
-        //Get all supported file types in pss_upload and group them together in a single List.
-        pngPaths = Directory.GetFiles(Upload.GpoFolderPath, "*.png", SearchOption.AllDirectories).ToList();
-        jpgPaths = Directory.GetFiles(Upload.GpoFolderPath, "*.jp*g", SearchOption.AllDirectories).ToList();
-        gifPaths = Directory.GetFiles(Upload.GpoFolderPath, "*.gif", SearchOption.AllDirectories).ToList();
-        mp4Paths = Directory.GetFiles(Upload.GpoFolderPath, "*.mp4", SearchOption.AllDirectories).ToList();
-        mkvPaths = Directory.GetFiles(Upload.GpoFolderPath, "*.mkv", SearchOption.AllDirectories).ToList();
-        movPaths = Directory.GetFiles(Upload.GpoFolderPath, "*.mov", SearchOption.AllDirectories).ToList();
-        allFullPaths = jpgPaths.Concat(pngPaths).Concat(gifPaths).Concat(mp4Paths).Concat(mkvPaths).Concat(movPaths).ToList();
+        allFullPaths = F.GetSupportedFiles(Upload.GpoFolderPath);
         allFiles = new List<C.UAFile>(allFullPaths.Count);
 
         foreach (string fullPath in allFullPaths)
