--- a/PSS/PSS/Pages/Upload.razor
+++ b/PSS/PSS/Pages/Upload.razor
@@ -6,7 +6,7 @@
 
 @{
     <div id="mainDiv">
-        @if (allPaths.Length > 0)
+        @if (allPaths.Count > 0)
         {
             <span class="bigText">Items Found in pss_upload Waiting to Be Added to Library</span>
             <button class="textBtn">
@@ -30,7 +30,7 @@
 }
 
 @code {
-    private static string[] jpgPaths, pngPaths, gifPaths, mp4Paths, mkvPaths, movPaths, allPaths;
+    private static List<string> allPaths;
 
     private static string gpoFolderPath;
 
@@ -61,14 +61,8 @@
         gpoFolderInputVis = "hidden";
         errorSpanVis = "hidden";
         gpoBtnVis = "hidden";
-        
-        jpgPaths = Directory.GetFiles(S.uploadFolderPath, "*.jp*g", SearchOption.AllDirectories);
-        pngPaths = Directory.GetFiles(S.uploadFolderPath, "*.png", SearchOption.AllDirectories);
-        gifPaths = Directory.GetFiles(S.uploadFolderPath, "*.gif", SearchOption.AllDirectories);
-        mp4Paths = Directory.GetFiles(S.uploadFolderPath, "*.mp4", SearchOption.AllDirectories);
-        mkvPaths = Directory.GetFiles(S.uploadFolderPath, "*.mkv", SearchOption.AllDirectories);
-        movPaths = Directory.GetFiles(S.uploadFolderPath, "*.mov", SearchOption.AllDirectories);
-        allPaths = jpgPaths.Concat(pngPaths).Concat(gifPaths).Concat(mp4Paths).Concat(mkvPaths).Concat(movPaths).ToArray();
+
+        allPaths = F.GetSupportedFiles(S.uploadFolderPath);
     }
 
 }
