--- a/PSS/PSS/wwwroot/css/Upload.css
+++ b/PSS/PSS/wwwroot/css/Upload.css
@@ -2,7 +2,7 @@
     padding: 10px;
     position: absolute;
     left: 50%;
-    top: 20%;
+    top: 220px;
     transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
