In Upload, fix button text saying "Go to Upload Apply" instead of "Go to Apply Upload".

--- a/PSS/PSS/Pages/Upload.razor
+++ b/PSS/PSS/Pages/Upload.razor
@@ -10,7 +10,7 @@
         {
             <span class="bigText">Items Found in pss_upload Waiting to Be Added to Library</span>
             <button class="textBtn">
-                <span class="material-icons-outlined">add_photo_alternate</span><a href="apply-upload">Go to Upload Apply</a>
+                <span class="material-icons-outlined">add_photo_alternate</span><a href="apply-upload">Go to Apply Upload</a>
             </button>
         }
         else
