View page title is now "View Item - PSS" instead of just "View".

--- a/PSS/PSS/Shared/ViewItem.razor
+++ b/PSS/PSS/Shared/ViewItem.razor
@@ -15,7 +15,7 @@ Optional Parameters:
 *@
 @inject NavigationManager navigationManager;
 
-<title>View</title>
+<title>View Item - PSS</title>
 <link href="/css/components/ViewItem.css" rel="stylesheet"/>
 
 @{
