--- a/PSS/PSS/Shared/ViewItem.razor
+++ b/PSS/PSS/Shared/ViewItem.razor
@@ -76,6 +76,7 @@ Optional Parameters:
             <div class="dataDiv">
                 <svg width="24px" height="24px" class="v1262d JUQOtc Y0p3Ue" viewBox="0 0 24 24"><path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V5h14v14zm-5-7l-3 3.72L9 13l-3 4h12l-4-5z"></path></svg>
                 <span>@Path.GetFileName(C.GetPathFromUuid(id))</span>
+                <button class="iconBtn" @onclick="@(() => editFileNameDivVis = "visible")"><span class="material-icons-outlined">edit</span></button>
             </div>
             
             @if (albums.Count > 0)
@@ -99,11 +100,21 @@ Optional Parameters:
         
         <AlbumSelector SelectedItems="@(new List<string> {path})" @bind-AlbumsVis="@albumsVis"/>
         
-        <div id="datePicker" style="visibility: @editDateDivVis">
+        <div class="inputBox" style="visibility: @editDateDivVis">
             <span>Enter new date taken:</span>
             <input title="" type="datetime-local" @bind="@newDateTaken" required/>
-            <div id="buttons">
+            <div>
                 <button class="iconBtn" @onclick="@(() => editDateDivVis = "hidden")"><span class="material-icons-outlined">close</span></button>
+                <button class="iconBtn" @onclick="@ConfirmBtnClick"><span class="material-icons-outlined">check</span></button>
+            </div>
+        </div>
+        
+        <div class="inputBox" style="visibility: @editFileNameDivVis">
+            <span>Enter new filename:</span>
+            <input title="" type="text" @bind="@newFilename" required/>
+            <span style="color: red">Error</span>
+            <div>
+                <button class="iconBtn" @onclick="@(() => editFileNameDivVis = "hidden")"><span class="material-icons-outlined">close</span></button>
                 <button class="iconBtn" @onclick="@ConfirmBtnClick"><span class="material-icons-outlined">check</span></button>
             </div>
         </div>
@@ -158,10 +169,13 @@ Optional Parameters:
     private static string path;
     private static DateTime ogDateTaken; //Original
     private static DateTime newDateTaken;
+    private static string editDateDivVis;
+
+    private static string newFilename, editFileNameDivVis;
+
     private static string albumsVis;
     private static string infoVis;
     private static string moreOptionsVis;
-    private static string editDateDivVis;
     private static List<C.Album> albums;
     private static int index = 0; //The current image's index in the list
 }
@@ -175,7 +189,7 @@ Optional Parameters:
         albumsVis = "hidden";
         infoVis = "hidden";
         moreOptionsVis = "hidden";
-        editDateDivVis = "hidden";
+        editDateDivVis = editFileNameDivVis = "hidden";
         albums = C.GetAlbumsItemIn(path);
         
         //Find index. Can't use IndexOf for reasons
